# d-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
assets/shaders/defaults/: fragment.frag
d-engine/Core/Application/: Application.c  Application.h  GameContext.h
d-engine/Core/GFX/: Renderer.c  Renderer.h  Shader.c  Shader.h  VertexArray.c  VertexArray.h
d-engine/Core/OS/Window/: Window.c  WindowProperties.c
d-engine/core/application/: Application.c  Application.h
d-engine/core/debug/: debug.h
d-engine/core/gfx/: Buffer.c  Buffer.h  IndexBuffer.c  IndexBuffer.h  Renderer.c  Renderer.h  Shader.c  Shader.h  VertexArray.c  VertexArray.h  VertexArrayObject.c  VertexArrayObject.h  VertexBuffer.c  VertexBuffer.h
d-engine/core/log/: log.c  log.h
d-engine/core/os/window/: Window.c  Window.h  WindowProperties.c  WindowProperties.h
docs/: libraries.md
